--- a/Samples/HanaBEE_SDK_SimpleSample/AndroidManifest.xml
+++ b/Samples/HanaBEE_SDK_SimpleSample/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:minSdkVersion="18"
         android:targetSdkVersion="18" />
 
+    <!-- For BLE Scan -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
@@ -15,7 +16,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo.Light" >
+        android:theme="@android:style/Theme.Holo.NoActionBar" >
         <activity
             android:name="com.hanamicron.example.hanabee_sdk_simplesample.MainActivity"
             android:label="@string/app_name" >
@@ -25,6 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name="com.hanamicron.beacon.bluetooth.BLEScanService"
+            android:exported="false" />
     </application>
 
 </manifest>
